welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:10: error: not found: value Maths
  if (Maths.abs(y - 10) < c) {
      ^