welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  var x=Math.min(a,b)
  var y=Math.min(x,c)
  if (Math.abs(y - 10) < a) {
    return true
  }
   if (Math.abs(y - 10) < b) {
    return true
  } 
  if (Maths.abs(y - 10) < c) {
    return true
  }
  return false }